feat: add clear filter button

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
     font-family: var(--font-base);
 }
 
-button[type='submit'] {
+button[type='submit'],
+button[type='reset'] {
     background-color: #226bf3;
 }
